structure_of_page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<h1>My Homepage</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset=""UTF-8">
 
-<h2>my link-in-bio</h2>
+    <title>Monique's links</title>
+
+    <style>
+      * {
+        border: 1px red dashed;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="main-container">image goes here</div>
+    <div class="image-row"></div>
+    <div class="name-row"></div>
+    <div class="social-icons-row"></div>
+    <div class="links-row"></div>
+  </body>
+  
+</html>
