--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
   </head>
 
   <body>
-    <div class="main-container">image goes here</div>
-    <div class="image-row"></div>
-    <div class="name-row"></div>
-    <div class="social-icons-row"></div>
-    <div class="links-row"></div>
+    <div class="main-container">
+    <div class="image-row">image goes here</div>
+
+    <div class="name-row">name goes here</div>
+
+    <div class="social-icons-row">soical links go here</div>
+
+    <div class="links-row">
+      <div class="item">first link</div>
+        <div class="item">second link</div>
+        <div class="item">thirdlink</div>
+      </div>
+    </div>
   </body>
   
 </html>
