--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <style>
       * {
-        border: 1px red dashed;
+        border: 1px red dotted;
       }
     </style>
   </head>
@@ -17,7 +17,7 @@
     <div class="image-row">image goes here</div>
     <div class="name-row">name goes here</div>
     <div class="social-icons-row">soical links go here</div>
-    <div class="links-row">
+    <div class="links-rows">
       <div class="item">first link</div>
       <div class="item">second link</div>
       <div class="item">thirdlink</div>
