--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
       * {
         border: 1px red dotted;
       }
-    </style>
+
+      body {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+</style>
   </head>
 
   <body>
     <div class="main-container">
-    <div class="image-row">image goes here</div>
-    <div class="name-row">name goes here</div>
-    <div class="social-icons-row">soical links go here</div>
+      <div class="image-row">
+      <img src="/justin-ha-ER3BuRKBJ2g-unsplash.jpg" alt="monique headshot" width="100" height="100"></div>
+   
+    <div class="name-row">
+      Monique Theogene</div>
+
+    <div class="social-icons-row">
+      <a href="https://github.com/MoniqueTheogene123" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/monique-theogene" target="_blank">LinkedIn</a>
+    
     <div class="links-rows">
       <div class="item">first link</div>
       <div class="item">second link</div>
