added .html and .item

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         border: 1px red dotted;
       }
 
+      html {
+        min-height: 100%;
+      }
+
+
+      .item {
+  background-color: rgba(149, 123, 173, 0.5);
+      }
+
+      
       body {
         min-height: 100%;
         padding-top: 40px;
