--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
+
+
 
 
     <title>Monique's links</title>
@@ -34,7 +43,9 @@
       .name-row {
        margin-bottom: 30px;
        text-align: center;
-       margin-bottom: 20px;
+       font-family:"Playfair Display";
+       font-size: 24px;
+       font-weight: 900;
       }
 
       .social-icons-row {
@@ -49,6 +60,10 @@
         flex-grow: 1;
       }
 
+      a {
+  color: rgba(255, 255, 255, 1.0);
+  text-decoration: none;
+      }
 
       .main-container {
         width: 640px;
@@ -61,6 +76,7 @@
         padding-bottom: 40px;
         background: linear-gradient(180deg, #1f005c, #5b0060);
         color: rgba(255, 255, 255, 1.0);
+        font-family:"Raleway";
         }
 
       .avatar-image {
@@ -84,10 +100,15 @@
       <img class="avatar-image" src="/thumbnails/justin-ha-ER3BuRKBJ2g-unsplash.jpg" alt="monique headshot"></div>
 
       <div class="social-icons-row">
-        <a href="https://github.com/MoniqueTheogene123" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/monique-theogene" target="_blank">LinkedIn</a>
+        <a href="https://github.com/MoniqueTheogene123" target="_blank">
+        <i class="fa-brands fa-github"></i>GitHub</a>
+        <a href="https://linkedin.com/in/monique-theogene" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+        <a href="https://instagram.com/momotheo/" target="_blank">
+          <i class="fa-brands fa-square-instagram"></i>Instagram</a>
       
       <div class="name-row">Monique Theogene</div>
+      <a href="https://moniquetheogene.com" target="_blank"></i>Monique Theogene</a>
     </div>
         
     <div class="links-rows">
