--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
     <div class="links-rows">
       <div class="item">
         <img src="/thumbnails/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="thumbnail">
-        <a target="_blank" href="http://weavesilk.com/" alt="Natur Mind">Weavesilk</a>
+        <a target="_blank" href="http://weavesilk.com/" alt="Coding Screen">Weavesilk</a>
       </div>
 
       <div class="item">
-        <img src="/thumbnails/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="thumbnail">
-        <a target="_blank" href="https://hackertyper.com/" alt="Natur Mind">hackerTyper</a>
+        <img src="/thumbnails/ilias-gainutdinov-jIWuKCfKFy4-unsplash.jpg" class="thumbnail">
+        <a target="_blank" href="https://hackertyper.com/" alt="Keyboard">hackerTyper</a>
       </div>
-      #test
+    
       <div class="item">
-        <img src="/thumbnails/tai-bui-QW89whdECIA-unsplash.jpg" class="thumbnail">
-        <a target="_blank" href="https://stellarium-web.org/" alt="Natur Mind">Sterllarium</a>
+        <img src="/thumbnails/dao-hi-u-QNZIzv2M2as-unsplash.jpg" class="thumbnail">
+        <a target="_blank" href="https://stellarium-web.org/" alt="Hardware">Sterllarium</a>
       </div>
 
       <div class="item">
-        <img src="/thumbnails/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="thumbnail">
+        <img src="/thumbnails/ilya-pavlov-OqtafYT5kTw-unsplash.jpg" class="thumbnail">
         <a target="_blank" href="https://apod.nasa.gov/apod/astropix.html" alt="NASA Picture of the Day">Natue mind</a>
       </div>
       
